[package]
name = "encfs"
version = "2.0.0-alpha.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "2.27"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5"
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
daemonize = "0.5"
chrono = "0.4"
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
fuse_mt = "0.6.3"
libc = "0.2.180"
log = "0.4.29"
openssl = "0.10.75"
quick-xml = { version = "0.39.0", features = ["serialize"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
rust-i18n = "3"
prost = "0.14.3"
sha2 = "0.10"

[[bin]]
name = "encfsctl"
path = "src/encfsctl.rs"

[dev-dependencies]
tar = "0.4"

[package.metadata.i18n]
default-locale = "en"
available-locales = ["en", "fr", "de"]
